Fix portfolio page items on mobile

--- a/styles/Portfolio.module.scss
+++ b/styles/Portfolio.module.scss
@@ -18,7 +18,10 @@
 }
 .boxes{
     display: grid;
+    grid-template-columns: 1fr;
+    @media screen and (min-width: $media-xsmall) {
     grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
+    }
     gap: 30px;
     margin-top: 30px;
     @media screen and (min-width: $media-tablet) {
